get rid of letter-spacing as it is inherited, fix review comments

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,98 +1,97 @@
 .about-section {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .about-section .description-container {
-    flex-basis: 100%;
-    margin-bottom: 40px;
+  flex-basis: 100%;
+  margin-bottom: 40px;
 }
 
 .about-section .card-heading {
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 32px;
-    letter-spacing: -0.02em;
-    text-align: left;
-    color: var(--green);
-    margin-bottom: 16px;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.14286;
+  text-align: left;
+  color: var(--green);
+  margin-bottom: 16px;
 }
 
 .about-section .description {
-    text-align: center;
-    margin-top: 16px;
+  text-align: center;
+  margin-top: 16px;
 }
 
 .about-section .item-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .about-section .card {
-    background: var(--gray);
-    border-radius: 16px;
-    padding: 32px;
-    flex-basis: 100%;
+  background: var(--gray);
+  border-radius: 16px;
+  padding: 32px;
+  flex-basis: 100%;
 }
 
 .about-section .image-background {
-    background-color: var(--green);
-    border-radius: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 51px 0;
-    margin-top: 20px;
+  background-color: var(--green);
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 51px 0;
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 768px) {
-    .about-section .description-container {
-        margin-bottom: 64px;
-    }
+  .about-section .description-container {
+    margin-bottom: 64px;
+  }
 
-    .about-section .description {
-        max-width: 658px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .about-section .description {
+    max-width: 658px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    .about-section .item-container {
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 32px;
-    }
+  .about-section .item-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
 
-    .about-section .card {
-        flex-basis: calc((100% - 32px) / 2);
-    }
+  .about-section .card {
+    flex-basis: calc((100% - 32px) / 2);
+  }
 
-    .about-section .image-background {
-        flex-basis: 100%;
-        padding: 16px 0;
-        margin-top: 32px;
-    }
+  .about-section .image-background {
+    flex-basis: 100%;
+    padding: 16px 0;
+    margin-top: 32px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .about-section {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
+  .about-section {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
-    /* the width of the list item container should be 2/3 */
-    .about-section .item-container {
-        flex-basis: calc(((100% - 64px) / 3) * 2);
-    }
+  /* the width of the list item container should be 2/3 */
+  .about-section .item-container {
+    flex-basis: calc(((100% - 64px) / 3) * 2);
+  }
 
-    .about-section .card {
-        flex-basis: calc((100% - 32px) / 2);
-    }
+  .about-section .card {
+    flex-basis: calc((100% - 32px) / 2);
+  }
 
-    .about-section .image-background {
-        flex-basis: calc((100% - 64px) / 3);
-        padding: 70px 0;
-        margin-top: 0;
-        margin-left: 32px;
-    }
+  .about-section .image-background {
+    flex-basis: calc((100% - 64px) / 3);
+    padding: 70px 0;
+    margin-top: 0;
+    margin-left: 32px;
+  }
 }
