--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,7 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71429;
   letter-spacing: -0.02em;
   font-family: 'Manrope', sans-serif;
   color: var(--black_80);
@@ -146,13 +146,14 @@ button {
 .section-heading {
   font-size: 32px;
   font-weight: 700;
-  line-height: 36px;
+  line-height: 1.125;
   text-align: center;
   color: var(--black);
 }
 
-.bold {
+.emphasized-paragraph {
   font-size: 20px;
+  line-height: 1.2;
   font-weight: 700;
   color: var(--black);
 }
